src/test/deca/context/invalid/ContextAvecObjet/DeclFields/intCallField.deca
//Description
//  test d'un int appelant une méthode d'une classe
//
//Réponse
//  Erreur contextuelle ligne 10
//  l'appel d'attribut est utilisable uniquement pour les instances de classe
{
    int x = 0;
    Object o = new Object();
    x.equals(o);
}